# ashare-theme-sector-radar

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  ITERATION_PLAN.md  LICENSE  PROJECT_DISCUSSION.md  PROJECT_OVERVIEW.md  PROMPT_FOR_CODEX.md  README.md  SECURITY.md  pyproject.toml  pytest.ini  requirements.txt  run_daily.py  sector_stock_bridge.py  setup.py  unified_pipeline.py
config/: daily.example.json  example.toml  industry_sectors_cache.json  ml_stock_ranker_v1.json  path_a_sector_clusters.json
docs/: PIPELINE_GUIDE.md  architecture_overview.md  daily_operator_guide.md  daily_result_output_template.md  disclaimer.md  final_manual_test_report.md  final_operational_acceptance_report.md  http_api_acceptance_report.md  mcp_paper_shadow.md  open_source_data_policy.md  open_source_release_checklist.md  phase13_daily_unified_report_integration.md  phase21_final_acceptance.md  phase26a1_llm_model_compatibility_report.md  phase26a2_agent_count_calibration_report.md  phase26b_rule_based_fallback_report.md  phase27_agent_weighted_stock_report.md  phase29_full_preset_cache_resume_report.md  phase30_daily_ai_stock_report_runner.md  phase31_selected_agents_llm_transparency_plan.md  phase31_selected_agents_llm_transparency_report.md  phase32_selected_agent_effectiveness_report.md  phase33_industry_rotation_selected_v2_report.md  phase34_daily_report_explainability_upgrade_report.md  phase35_1_acceptance_rerun_report.md  phase35_implementation_report.md  phase36a_mapping_to_local_concept_members_report.md  phase36b_industry_rotation_local_fallback_report.md  phase38_runtime_quality_fix_report.md  phase39_candidate_pool_and_agent_effectiveness_report.md  phase40_candidate_pool_completion_weak_agent_repair_report.md  (+29 more)
(+1823 files in other folders)
