[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a-share-theme-sector-radar"
version = "0.1.0"
description = "Research-oriented A-share theme and sector rotation analysis framework."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Theme Sector Radar contributors" }]
license = { text = "MIT" }
keywords = ["a-share", "sector-rotation", "theme-analysis", "quant-research", "stock-research"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "pydantic>=2.0.0",
  "akshare>=1.12.0",
  "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/your-org/a-share-theme-sector-radar"
Documentation = "https://github.com/your-org/a-share-theme-sector-radar/tree/main/docs"
Issues = "https://github.com/your-org/a-share-theme-sector-radar/issues"

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
]
mcp = [
  "mcp>=1.0",
]
ml = [
  "lightgbm>=4.0,<5.0",
  "numpy>=2.0",
  "pandas>=2.0",
  "scikit-learn>=1.5",
  "joblib>=1.4",
]

[project.scripts]
theme-sector-radar = "theme_sector_radar.cli:main"

[tool.setuptools.packages.find]
include = ["theme_sector_radar*"]

[tool.setuptools.package-data]
theme_sector_radar = ["data/fixtures/*.json"]
